# django-project-core-settings

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
django_project_core_settings/: SETTINGS.md  __init__.py  base.py  dev.py  local.py  prod.py
django_project_core_settings/components/: apps.py  auth.py  cache.py  core.py  csp.py  database.py  did_auth.py  email.py  logging.py  middleware.py  rate_limit.py  rest_api.py  sauth.py  security.py  static.py
django_project_core_settings/utils/: env.py  path_validator.py  paths.py
